--- a/HackFlix/src/components/Hero.css
+++ b/HackFlix/src/components/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url("./banner.jpg");
+  background-image: url("banner.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -7,7 +7,6 @@
   padding-top: 100px;
 }
 
-/* Opcional: un overlay para oscurecer la imagen */
 .hero::before {
   content: "";
   position: absolute;
